Use guile-2.0 pkg-config file directly to obtain guile site directory

--- a/a-sync/Makefile.am
+++ b/a-sync/Makefile.am
@@ -2,7 +2,7 @@
 
 SOURCES = monotonic-time.scm coroutines.scm event-loop.scm compose.scm
 
-moduledir = $(GUILE_SITE)/a-sync
+moduledir = $(GUILE20_SITEDIR)/a-sync
 module_DATA = $(SOURCES) gnome-glib.scm
 
 if COMPILE_TO_BYTECODE
