--- a/a-sync/Makefile.am
+++ b/a-sync/Makefile.am
@@ -8,6 +8,9 @@ module_DATA = $(SOURCES) gnome-glib.scm
 if COMPILE_TO_BYTECODE
 GOBJECTS = $(SOURCES:%.scm=%.go)
 
+gobjectsdir = $(GUILE20_OBJDIR)/a-sync
+gobjects_DATA = $(GOBJECTS)
+
 CLEANFILES = $(GOBJECTS)
 
 SUFFIXES = .scm .go
@@ -15,7 +18,10 @@ SUFFIXES = .scm .go
 .scm.go:
 	$(top_builddir)/a-sync/a-sync-compile.sh "$@" "$<"
 
-module_DATA += $(GOBJECTS)
+# make sure that timestamps on object files are after that of source
+# files
+install-data-hook:
+	for files in $(GOBJECTS); do touch -c $(gobjectsdir)/$$files; done
 endif
 
 EXTRA_DIST = $(SOURCES) gnome-glib.scm a-sync-compile.sh
