--- a/configure.ac
+++ b/configure.ac
@@ -35,6 +35,7 @@ AC_CONFIG_MACRO_DIR([m4])
 dnl check for guile
 PKG_CHECK_MODULES(GUILE, guile-2.0 >= 2.0.2)
 AC_CHECK_GUILE_SITEDIR
+AC_CHECK_GUILE_OBJDIR
 
 dnl check whether to compile scheme files to bytecode
 AC_CHECK_COMPILE_SCHEME
