--- a/a-sync/Makefile.am
+++ b/a-sync/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SOURCES = monotonic-time.scm coroutines.scm event-loop.scm compose.scm sockets.scm meeting.scm
+SOURCES = monotonic-time.scm coroutines.scm event-loop.scm thread-pool.scm compose.scm sockets.scm meeting.scm
 
 moduledir = $(GUILE20_SITEDIR)/a-sync
 module_DATA = $(SOURCES) gnome-glib.scm
