--- a/guile-a-sync.pc.in
+++ b/guile-a-sync.pc.in
@@ -4,5 +4,6 @@ libdir=@libdir@
 includedir=@includedir@
 
 Name: guile-a-sync
-Description: Event loop and coroutine interface for guile
+Description: Event loop and coroutine interface for guile-2.0
 Version: @VERSION@
+Requires: guile-2.0
